--- a/source/themes/custom/sata/styles/abstracts/mixins/_typography.scss
+++ b/source/themes/custom/sata/styles/abstracts/mixins/_typography.scss
@@ -44,7 +44,7 @@
   @if $color == light {
     color: $color-white;
   } @else if $color == dark {
-    color: $primary-emerald;
+    color: $primary-orange;
   } @else if $color == black {
     color: $black;
   }
