--- a/source/themes/custom/sata/styles/base/_inputs.scss
+++ b/source/themes/custom/sata/styles/base/_inputs.scss
@@ -181,8 +181,8 @@ $active-gap: 8px; // the math likes px values
   }
 
   input[type='checkbox']:checked + label:before {
-    background-color: $primary-emerald;
-    border-color: $primary-emerald;
+    background-color: $primary-orange;
+    border-color: $primary-orange;
   }
 
   // fake input box active indicator
@@ -251,7 +251,7 @@ $active-gap: 8px; // the math likes px values
   // fake input box active indicator
   input[type='radio']:checked + label:after,
   input[type='radio']:not(:checked) + label:after {
-    background: $primary-emerald;
+    background: $primary-orange;
     border-radius: 100%;
     content: '';
     height: calc(#{$active-width} - #{$active-gap});
