--- a/source/themes/custom/sata/styles/contrib-overrides/bazaarvoice/bazaarvoice.scss
+++ b/source/themes/custom/sata/styles/contrib-overrides/bazaarvoice/bazaarvoice.scss
@@ -17,7 +17,7 @@
 .bv-cv2-cleanslate {
   .bv-inline-histogram-ratings-star {
     .bv-glyph {
-      color: $primary-emerald !important;
+      color: $primary-orange !important;
     }
   }
 
