--- a/source/themes/custom/sata/styles/libraries/block/product-buy-now-sticky.scss
+++ b/source/themes/custom/sata/styles/libraries/block/product-buy-now-sticky.scss
@@ -122,7 +122,7 @@
         .ps-widget {
           @include btn(primary);
 
-          border: 2px solid $primary-emerald !important;
+          border: 2px solid $primary-orange !important;
           float: unset;
 
           &:hover {
