--- a/source/themes/custom/sata/styles/libraries/node/teaser--media-page.scss
+++ b/source/themes/custom/sata/styles/libraries/node/teaser--media-page.scss
@@ -128,7 +128,7 @@
     outline: 2px solid $black;
 
     .node__read-more-button {
-      color: $primary-emerald;
+      color: $primary-orange;
       background-color: $black;
     }
 
