--- a/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
@@ -34,7 +34,7 @@
       display: flex;
       overflow: hidden;
       padding-top: 0;
-      border: 2px solid $primary-emerald;
+      border: 2px solid $primary-orange;
 
       @include media('>md') {
         border: 0;
@@ -128,7 +128,7 @@
     }
 
     &:hover {
-      color: $primary-emerald;
+      color: $primary-orange;
       background-color: $black;
 
       &.ps-disabled > small {
