--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content.scss
@@ -237,7 +237,7 @@
     margin-top: 2rem;
 
     &:hover {
-      border: 1px solid $primary-emerald !important;
+      border: 1px solid $primary-orange !important;
     }
   }
 }
