--- a/source/themes/custom/sata/styles/libraries/paragraph/full--steps.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--steps.scss
@@ -171,7 +171,7 @@
 
       &::after {
         height: 95%;
-        border-left: 2px dashed $primary-emerald;
+        border-left: 2px dashed $primary-orange;
       }
     }
 
@@ -182,7 +182,7 @@
         top: 50%;
         left: 0;
         width: 100%;
-        border-top: 2px dashed $primary-emerald;
+        border-top: 2px dashed $primary-orange;
       }
     }
   }
@@ -193,7 +193,7 @@
     font-family: $font-brand;
     font-size: rem(16px);
     font-weight: 800;
-    background-color: $primary-emerald;
+    background-color: $primary-orange;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -203,7 +203,7 @@
 
     &::after {
       content: '';
-      background-color: $primary-emerald;
+      background-color: $primary-orange;
       position: absolute;
       top: 0;
       right: rem(-8px);
