--- a/source/themes/custom/sata/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/sata/styles/libraries/view/new-products.scss
@@ -55,7 +55,7 @@
     overflow: hidden scroll;
 
     scrollbar-width: thin; // sass-lint:disable-line no-misspelled-properties
-    scrollbar-color: $primary-emerald transparent; // sass-lint:disable-line no-misspelled-properties
+    scrollbar-color: $primary-orange transparent; // sass-lint:disable-line no-misspelled-properties
 
     &::-webkit-scrollbar {
       width: 5px;               /* width of the entire scrollbar */
@@ -66,7 +66,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: $primary-emerald;    /* color of the scroll thumb */
+      background-color: $primary-orange;    /* color of the scroll thumb */
       border-radius: 20px;       /* roundness of the scroll thumb */
       border: 3px solid transparent;  /* creates padding around scroll thumb */
     }
