--- a/source/themes/custom/sata/styles/libraries/view/search.scss
+++ b/source/themes/custom/sata/styles/libraries/view/search.scss
@@ -225,7 +225,7 @@
       }
 
       @include media('>lg-plus') {
-        background-color: $primary-emerald;
+        background-color: $primary-orange;
         max-width: rem(455px);
         text-align: left;
         position: relative;
@@ -234,7 +234,7 @@
 
         // Performance Device
         &::after {
-          background-color: $primary-emerald;
+          background-color: $primary-orange;
           position: absolute;
           content: '';
           width: 30px;
@@ -248,7 +248,7 @@
 
       h4 {
         text-transform: uppercase;
-        color: $primary-emerald;
+        color: $primary-orange;
 
         @include media('>lg-plus') {
           color: $black;
