--- a/source/themes/custom/sata/styles/libraries/view/view.scss
+++ b/source/themes/custom/sata/styles/libraries/view/view.scss
@@ -30,7 +30,7 @@
 
         a {
           color: $white;
-          background-color: $primary-emerald;
+          background-color: $primary-orange;
           padding: rem(7px 12px);
         }
       }
