--- a/source/themes/custom/sata/styles/libraries/node/full--media-page.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--media-page.scss
@@ -103,7 +103,7 @@
           a {
             @include btn(primary);
             background-color: transparent;
-            border: 2px solid $primary-emerald !important;
+            border: 2px solid $primary-orange !important;
             padding: .5rem .75rem;
 
             @include media('>md') {
