--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
@@ -58,10 +58,10 @@
 
         .field--name-field-link a {
           @include btn(secondary);
-          color: $primary-emerald;
+          color: $primary-orange;
           font-weight: $fw-extra-bold;
           font-size: rem(24px);
-          border: 1px solid $primary-emerald;
+          border: 1px solid $primary-orange;
           background-color: $black;
           display: inline-flex;
           justify-content: center;
@@ -71,7 +71,7 @@
           &:hover {
             color: $black;
             border-color: $black;
-            background-color: $primary-emerald;
+            background-color: $primary-orange;
           }
 
           @include media('<sm') {
