--- a/source/themes/custom/sata/styles/libraries/paragraph/full--featured-media--layout-slider.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--featured-media--layout-slider.scss
@@ -28,8 +28,8 @@
       opacity: 1;
 
       &:hover {
-        background-color: $primary-emerald;
-        border-color: $primary-emerald;
+        background-color: $primary-orange;
+        border-color: $primary-orange;
       }
 
       &.component-featured-media__button-prev {
