--- a/source/themes/custom/sata/styles/libraries/paragraph/full--product-slider.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--product-slider.scss
@@ -80,9 +80,9 @@
     }
 
     .component-product-slider__button {
-      background-color: $primary-emerald;
+      background-color: $primary-orange;
       background-size: rem(10px) rem(16px);
-      border: 1px solid $primary-emerald;
+      border: 1px solid $primary-orange;
       height: rem(48px);
       width: rem(48px);
       margin: 0;
@@ -91,7 +91,7 @@
 
       &:hover {
         background-color: $color-black;
-        border-color: $primary-emerald;
+        border-color: $primary-orange;
       }
 
       &.component-product-slider__button-prev {
@@ -143,11 +143,11 @@
     width: 100%;
 
     .component-product-slider__button {
-      background-color: $primary-emerald;
+      background-color: $primary-orange;
       background-position: center;
       background-repeat: no-repeat;
       background-size: rem(10px) rem(16px);
-      border: 1px solid $primary-emerald;
+      border: 1px solid $primary-orange;
       display: none;
       height: rem(48px);
       width: rem(48px);
@@ -181,11 +181,11 @@
 
       .swiper-pagination-bullet {
         background: transparent;
-        border-color: $primary-emerald;
+        border-color: $primary-orange;
       }
 
       .swiper-pagination-bullet-active {
-        background: $primary-emerald;
+        background: $primary-orange;
       }
     }
   }
