--- a/source/themes/custom/sata/styles/libraries/paragraph/full--tabs.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--tabs.scss
@@ -64,7 +64,7 @@ $tabs-border-width-active: rem(5px);
             display: block;
             height: $tabs-border-width-active;
             top: 100%;
-            border-bottom: $tabs-border-width-active solid $primary-emerald;
+            border-bottom: $tabs-border-width-active solid $primary-orange;
           }
         }
       }
