--- a/source/themes/custom/sata/styles/libraries/view/related-products.scss
+++ b/source/themes/custom/sata/styles/libraries/view/related-products.scss
@@ -60,9 +60,9 @@
       }
 
       .view-related-products-slider__button {
-        background-color: $primary-emerald;
+        background-color: $primary-orange;
         background-size: rem(10px) rem(16px);
-        border: 1px solid $primary-emerald;
+        border: 1px solid $primary-orange;
         height: rem(48px);
         width: rem(48px);
         margin: 0;
@@ -71,7 +71,7 @@
 
         &:hover {
           background-color: $color-black;
-          border-color: $primary-emerald;
+          border-color: $primary-orange;
         }
 
         &.view-related-products-slider__button-prev {
@@ -123,11 +123,11 @@
       width: 100%;
 
       .view-related-products-slider__button {
-        background-color: $primary-emerald;
+        background-color: $primary-orange;
         background-position: center;
         background-repeat: no-repeat;
         background-size: rem(10px) rem(16px);
-        border: 1px solid $primary-emerald;
+        border: 1px solid $primary-orange;
         display: none;
         height: rem(48px);
         width: rem(48px);
@@ -161,11 +161,11 @@
 
         .swiper-pagination-bullet {
           background: transparent;
-          border-color: $primary-emerald;
+          border-color: $primary-orange;
         }
 
         .swiper-pagination-bullet-active {
-          background: $primary-emerald;
+          background: $primary-orange;
         }
       }
     }
