changed header menu end to flex-end

--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -657,7 +657,7 @@ $mobile-menu-item-button-height: 7rem;
 
       .menu--depth-0 {
         @include flex;
-        @include flex-x(justify-content, end);
+        @include flex-x(justify-content, flex-end);
       }
 
       .menu-item--depth-0 {
