--- a/source/themes/custom/sata/styles/libraries/region/footer.scss
+++ b/source/themes/custom/sata/styles/libraries/region/footer.scss
@@ -36,10 +36,6 @@ $footer-bp-mobile: '<sm';
 
     a {
       @include link(light, hover);
-
-      &:hover {
-        cursor: pointer;
-      }
     }
   }
 
@@ -48,7 +44,7 @@ $footer-bp-mobile: '<sm';
     @include flex-x(flex-direction, column);
 
     .block-footer-navigation-block__header {
-      padding: 0 0 2.75rem;
+      padding: 0 0 1rem;
 
       .block-footer-navigation-block__footer-logo {
         max-width: 16rem;
@@ -61,11 +57,20 @@ $footer-bp-mobile: '<sm';
 
       .block-footer-navigation-block__footer-address p {
         font-size: rem(12px);
-        margin: 0.5rem 0 0;
+        margin: 0;
 
-        &:last-of-type {
-          margin: 1rem 0;
-          text-decoration: underline;
+        &:first-of-type {
+          margin-top: 0.5rem;
+        }
+
+        &.block-footer-navigation-block__footer-address-phone {
+          margin-top: rem(10px);
+        }
+      }
+
+      .block-footer-navigation-block__footer-social-menu-wrapper {
+        .menu--social {
+          padding-top: rem(10px);
         }
       }
     }
@@ -73,14 +78,22 @@ $footer-bp-mobile: '<sm';
 
   .menu {
     margin: 0;
-    padding: 0;
+    padding: 1rem 0;
+
+    &.menu--depth-1 {
+      padding: 0;
+    }
 
     &.menu--social {
       @include flex;
       @include flex-x(flex-direction, row);
 
+      .menu-item:first-of-type {
+        margin-right: rem(-10px);
+      }
+
       .menu-item:not(:first-of-type) {
-        margin-left: rem(20px);
+        margin-left: rem(28px);
       }
     }
 
@@ -96,6 +109,7 @@ $footer-bp-mobile: '<sm';
       position: relative;
       text-indent: -9999px;
       width: 1rem;
+      font-size: rem(20px);
 
       &::before {
         @extend %icon;
@@ -136,14 +150,14 @@ $footer-bp-mobile: '<sm';
       text-transform: uppercase;
 
       &.menu-item__link--depth-0 {
-        font-size: 1.15rem;
+        font-size: rem(16px);
         font-weight: 800;
       }
     }
 
     .menu-item--depth-1 {
       a {
-        font-size: 0.75rem;
+        font-size: rem(14px);
         font-weight: 500;
       }
     }
@@ -193,11 +207,7 @@ $footer-bp-mobile: '<sm';
           color: $white;
 
           a {
-            color: $primary-solar;
-
-            &:hover {
-              color: $white;
-            }
+            @include link(solar, hover);
           }
         }
       }
@@ -250,12 +260,15 @@ $footer-bp-mobile: '<sm';
 
 @include media($footer-bp-desktop) {
   .region-footer {
-    background: linear-gradient(to right, $primary-emerald 50%, $primary-dark 50%);
+    background: linear-gradient(to right, $primary-emerald 58%, $primary-dark 58%);
 
     .region-footer__inner-container {
-      @include container();
+      max-width: 85em;
+      width: calc(100% - 2rem);
+      margin-left: auto !important;
+      margin-right: auto !important;
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 0.66fr;
     }
 
     .region-footer-first {
@@ -268,7 +281,7 @@ $footer-bp-mobile: '<sm';
     }
 
     .region-footer-second__content {
-      padding: 3.75rem 0 3.75rem 10rem;
+      padding: 3.75rem 2rem 3.75rem 3rem;
     }
 
     .block-footer-navigation-block__nav {
@@ -278,14 +291,26 @@ $footer-bp-mobile: '<sm';
     }
 
     .menu--footer {
-      grid-template-columns: 1fr 1.25fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
       margin: 0;
       padding: 0 0 0 3rem;
     }
   }
 }
 
-@media (min-width: 1009px) and (max-width: 1150px) {
+@media (min-width: 1800px) and (max-width: 2499px) {
+  .region-footer {
+    background: linear-gradient(to right, $primary-emerald 56%, $primary-dark 56%);
+  }
+}
+
+@media (min-width: 2500px) {
+  .region-footer {
+    background: linear-gradient(to right, $primary-emerald 54%, $primary-dark 54%);
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1150px) {
   .region-footer {
     .region-footer-second__content {
       padding: 3.75rem 0 3.75rem 8rem;
@@ -302,7 +327,7 @@ $footer-bp-mobile: '<sm';
 @include media('<1150px') {
   .region-footer {
     .region-footer__inner-container {
-      grid-template-columns: 55% 45%;
+      grid-template-columns: 1fr 1fr;
     }
 
     .menu--footer {
@@ -311,7 +336,7 @@ $footer-bp-mobile: '<sm';
   }
 }
 
-@media (min-width: 1009px) and (max-width: 1150px) {
+@media (min-width: 1025px) and (max-width: 1150px) {
   .region-footer {
     .region-footer__inner-container {
       .menu--footer {
@@ -323,7 +348,6 @@ $footer-bp-mobile: '<sm';
 }
 
 @include media($footer-bp-tablet-landscape) {
-
   .region-footer {
     .region-footer__inner-container {
       @include container-full-width();
@@ -353,44 +377,87 @@ $footer-bp-mobile: '<sm';
       padding: 3rem 0;
     }
 
+    .region-footer-first__content {
+      padding-top: 0;
+    }
+
     .block-footer-navigation-block__nav {
       .block-footer-navigation-block__content {
         @include flex-x(flex-direction, column);
+
+        .block-footer-navigation-block__header {
+          order: 2;
+          margin-top: rem(20px);
+          padding-bottom: 0;
+        }
+
 
         .block-footer-navigation-block__footer-address-social-menu-container {
           @include flex;
           @include flex-x(flex-direction, column);
 
-          order: 2;
+          order: 3;
 
           .block-footer-navigation-block__footer-address {
-            order: 2;
+            order: 1;
+
+            .block-footer-navigation-block__footer-address-phone {
+              a {
+                font-size: rem(16px);
+              }
+            }
           }
 
           .block-footer-navigation-block__footer-social-menu-wrapper {
-            order: 1;
+            order: 2;
           }
         }
 
         .block-footer-navigation-block__footer-menu-wrapper {
+          @include container-full-width();
           order: 1;
         }
       }
     }
 
     .menu--footer {
-      grid-template-columns: 1fr 1.25fr 1fr;
-      padding: 0;
-    }
-  }
-}
-
-@include media($footer-bp-tablet-portrait) {
-
-  .region-footer {
-    .menu--footer {
       grid-template-columns: 1fr;
+      padding: 0;
+      margin-bottom: rem(20px);
+
+      .menu-item--depth-0 {
+        border-bottom: rem(1px) solid $gray-50;
+        margin: 0;
+        position: relative;
+
+        @include on-event() {
+          background-color: $black;
+        }
+
+        .menu-item__link {
+          padding: 0.5rem 2rem;
+          font-size: rem(16px);
+
+          &.menu-item__link--depth-0 {
+            @include icon('arrow', after, false);
+            display: flex;
+            font-size: rem(20px);
+
+            &::after {
+              position: absolute;
+              top: 2%;
+              right: 2rem;
+              color: $black;
+            }
+
+            @include on-event {
+              &::after {
+                color: $white;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
-
